cmake_minimum_required(VERSION 3.21)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp lexer.h lexer.cpp symbole.h symbole.cpp Automate.cpp Automate.h Etat/Etat.cpp Etat/Etat.h Etat/Etat1.cpp Etat/Etat0.cpp Etat/Etat0.h Etat/Etat2.cpp Etat/Etat2.h Etat/Etat3.cpp Etat/Etat3.h Etat/Etat4.cpp Etat/Etat4.h Etat/Etat5.cpp Etat/Etat5.h Etat/Etat6.cpp Etat/Etat6.h Etat/Etat7.cpp Etat/Etat7.h Etat/Etat8.cpp Etat/Etat8.h Etat/Etat9.cpp Etat/Etat9.h)

